--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "@hotwired/stimulus": "^3.2.1",
     "@hotwired/turbo-rails": "^7.3.0",
     "autoprefixer": "^10.4.14",
     "daisyui": "^2.51.6",
     "esbuild": "^0.17.19",
     "postcss": "^8.4.23",
+    "stimulus-use": "^0.52.0",
     "tailwindcss": "^3.3.2"
   },
   "scripts": {
