--- a/config/litejob.yml
+++ b/config/litejob.yml
@@ -1,5 +1,5 @@
 default: &default
-  config_path: # i want to load environmentized-config myself, so we nil-ify this
+  config_path: # config_paths are always loaded, unless blanked (ref: https://github.com/oldmoe/litestack/blob/master/lib/litestack/litesupport.rb#L241)
   logger:      # ref: https://github.com/oldmoe/litestack/blob/master/lib/active_job/queue_adapters/litejob_adapter.rb#L36
   sync: 1
 
